add some scripts

--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,17 @@
 <html>
-
-<head>
+  <head>
     <title>Spacetube!!</title>
-</head>
+    <link href="./styles.css" rel="stylesheet" />
+  </head>
 
-<body>
-    <h1>Spacetube is here!!</h1>
-</body>
-
+  <body>
+    <div id="tube-room-container">
+      <h1>Tube Room</h1>
+    </div>
+    <div id="matrix-room-container">
+      <h1>Matrix Room</h1>
+      <input type="text" />
+    </div>
+    <script src="scripts.js"></script>
+  </body>
 </html>
