fix link token retrieval

--- a/web/index.html
+++ b/web/index.html
@@ -5,10 +5,10 @@
   </head>
 
   <body>
-    <div id="tube-room-container">
+    <div id="tube-room-container" class="room-container">
       <h1>Tube Room</h1>
     </div>
-    <div id="matrix-room-container">
+    <div id="matrix-room-container" class="room-container">
       <h1>Matrix Room</h1>
       <input type="text" />
     </div>
