add constants file that is created from env at runtime

--- a/web/index.html
+++ b/web/index.html
@@ -1,25 +1,25 @@
 <html>
-  <head>
+
+<head>
     <title>Spacetube!!</title>
     <link href="./styles.css" rel="stylesheet" />
-  </head>
+</head>
 
-  <body>
+<body>
     <div id="tube-room-container" class="room-container">
-      <h1>Tube Room</h1>
-      <div id="tube-room-events-container" class="room-events-container"></div>
+        <h1>Tube Room</h1>
+        <div id="tube-room-events-container" class="room-events-container"></div>
     </div>
     <div id="matrix-room-container" class="room-container">
-      <h1>Matrix Room</h1>
-      <div
-        id="matrix-room-events-container"
-        class="room-events-container"
-      ></div>
-      <div id="new-message-container">
-        <input type="text" id="new-message-text" />
-        <button id="send-button" disabled>-></button>
-      </div>
+        <h1>Matrix Room</h1>
+        <div id="matrix-room-events-container" class="room-events-container"></div>
+        <div id="new-message-container">
+            <input type="text" id="new-message-text" />
+            <button id="send-button" disabled>-></button>
+        </div>
     </div>
+    <script src="constants.js"></script>
     <script src="scripts.js"></script>
-  </body>
+</body>
+
 </html>
