--- a/web/index.html
+++ b/web/index.html
@@ -3,19 +3,20 @@
 <head>
     <title>Spacetube!!</title>
     <link href="./styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
 </head>
 
 <body>
     <div id="tube-room-container" class="room-container">
-        <h1>Tube Room</h1>
+        <h1 id="tube-room-title">Tube Room</h1>
         <div id="tube-room-events-container" class="room-events-container"></div>
     </div>
     <div id="matrix-room-container" class="room-container">
-        <h1>Matrix Room</h1>
+        <h1 id="matrix-room-title">Matrix Room</h1>
         <div id="matrix-room-events-container" class="room-events-container"></div>
         <div id="new-message-container">
             <input type="text" id="new-message-text" />
-            <button id="send-button" disabled>-></button>
+            <button id="send-button" disabled>➡️</button>
         </div>
     </div>
     <script src="constants.js"></script>
