--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
         <h1 id="matrix-room-title">Matrix Room</h1>
         <div id="matrix-room-events-container" class="room-events-container"></div>
         <div id="new-message-container">
-            <input type="text" id="new-message-text" />
+            <input type="text" id="new-message-text" placeholder="..." />
             <button id="send-button" disabled>➡️</button>
         </div>
     </div>
