show existing tubes if there are any

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Spacetube!</title>
+  <title>Space Tube: Life Is Better In Tubes</title>
   <link rel="icon" type="image/x-icon" href="./favicon.png">
 </head>
 
